Update code color

--- a/basic-reduced.css
+++ b/basic-reduced.css
@@ -91,7 +91,7 @@ kbd {
   color: rgb(255, 255, 255);
   border-radius: 4px;
   background: #2e2e2e !important;
-  color: #42b4ff;
+  color: #96d5ff;
 }
 
 code span {
